--- a/style/bace.css
+++ b/style/bace.css
@@ -69,7 +69,7 @@ img{ border:none;}
 .bao a{ float:left; margin-left:10px;}
 
 /*bg1-----------------*/
-.bg1{ width:1440px; height:340px;background:url(../images/index/bg1.png) no-repeat; overflow:hidden;}
+.bg1{ width:100%; height:340px;background:url(../images/index/bg1.png) no-repeat; overflow:hidden;background-size: cover;}
 
 
 
@@ -88,7 +88,7 @@ img{ border:none;}
 .copy img{ border:#e5e5e5 1px solid;}
 
 /*bottomnav*/
-.bottomNav{ height:40px; line-height:40px; margin:10px 0; background:#a0a0a0;}
+.bottomNav{ height:40px; line-height:40px; background:#a0a0a0;}
 .bottomNav li{ float:left;}
 .bottomNav li a{ float:left; padding:0 45px; font-size:14px; font-weight:bold; color:#fff;}                     
 .bottomNav li a:hover{ float:left; background:#000; color:#FFF;}
